fix: fail closed coverage completeness